<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="@color/black"
    android:layout_height="match_parent"
    tools:context="com.premsethueqev.clusterio.DemoActivity">

    <!-- Refresh button top-right -->
    <Button
        android:id="@+id/btnRefresh"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginEnd="@dimen/_30dp"
        android:layout_marginTop="@dimen/_10dp"
        android:text="@string/refresh"
        android:textColor="@color/black" />

    <!-- Row 1: SoC | Charge State -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/_20dp"
        android:layout_marginStart="@dimen/_30dp"
        android:layout_marginEnd="@dimen/_30dp">

        <TextView
            android:id="@+id/tvEvBatteryLevel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAlignment="center"
            android:padding="@dimen/_10dp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:background="@drawable/textview_border_bg"
            android:layout_marginEnd="@dimen/_10dp"
            android:textSize="@dimen/_26sp"
            android:text="@string/ev_battery_level_label" />

        <TextView
            android:id="@+id/tvEvChargeState"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAlignment="center"
            android:padding="@dimen/_10dp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:background="@drawable/textview_border_bg"
            android:layout_marginStart="@dimen/_10dp"
            android:textSize="@dimen/_26sp"
            android:text="@string/ev_charge_state_label" />
    </LinearLayout>

    <!-- Row 2: Battery Capacity | Estimated Range -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/_20dp"
        android:layout_marginStart="@dimen/_30dp"
        android:layout_marginEnd="@dimen/_30dp">

        <TextView
            android:id="@+id/tvEvBatteryCapacity"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAlignment="center"
            android:padding="@dimen/_10dp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:background="@drawable/textview_border_bg"
            android:layout_marginEnd="@dimen/_10dp"
            android:textSize="@dimen/_26sp"
            android:text="@string/ev_battery_capacity_label" />

        <TextView
            android:id="@+id/tvEvEstimatedRange"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAlignment="center"
            android:padding="@dimen/_10dp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:background="@drawable/textview_border_bg"
            android:layout_marginStart="@dimen/_10dp"
            android:textSize="@dimen/_26sp"
            android:text="@string/ev_estimated_range_label" />

        <TextView
            android:id="@+id/tvEvMinEstimatedRange"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAlignment="center"
            android:padding="@dimen/_10dp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:background="@drawable/textview_border_bg"
            android:layout_marginStart="@dimen/_10dp"
            android:textSize="@dimen/_26sp"
            android:text="@string/ev_min_estimated_range_label" />
    </LinearLayout>

    <!-- Row 3: Port Open | Port Connected -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/_20dp"
        android:layout_marginStart="@dimen/_30dp"
        android:layout_marginEnd="@dimen/_30dp">

        <TextView
            android:id="@+id/tvEvChargePortOpen"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAlignment="center"
            android:padding="@dimen/_10dp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:background="@drawable/textview_border_bg"
            android:layout_marginEnd="@dimen/_10dp"
            android:textSize="@dimen/_26sp"
            android:text="@string/ev_charge_port_open_label" />

        <TextView
            android:id="@+id/tvEvChargePortConnected"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAlignment="center"
            android:padding="@dimen/_10dp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:background="@drawable/textview_border_bg"
            android:layout_marginStart="@dimen/_10dp"
            android:textSize="@dimen/_26sp"
            android:text="@string/ev_charge_port_connected_label" />
    </LinearLayout>

    <!-- Row 4: Port Location (hidden) -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/_20dp"
        android:layout_marginStart="@dimen/_30dp"
        android:layout_marginEnd="@dimen/_30dp"
        android:visibility="gone">

        <TextView
            android:id="@+id/tvEvPortLocation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:padding="@dimen/_10dp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:background="@drawable/textview_border_bg"
            android:textSize="@dimen/_26sp"
            android:text="@string/ev_port_location_label" />
    </LinearLayout>

</LinearLayout>
